--- a/firebase.json
+++ b/firebase.json
@@ -3,12 +3,12 @@
     "rules": "database.rules.json"
   },
   "hosting": {
+    "site": "bandycamp",
     "public": "public",
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
     ]
-  },
-  "emulators": {}
+  }
 }
