--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "dependencies": {},
   "devDependencies": {
     "eslint": "^7.23.0",
-    "eslint-config-google": "^0.14.0"
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-html": "^6.1.2"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
