Added performer mode to allow instrument performers the ability to see notes in standard notation. Implemented log-in so they can store their config info in the database. Also added various functions to keep notes within a defined range based on instrument selection. MIDI output is allowed for MIDI instruments.Updated Controller to store an array of MIDI notes to the database when using with Performers. TODO: tie all user params to UI settings page and store users' setting in DB for recall.

--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,20 @@
   "hosting": {
     "site": "bandycamp",
     "public": "public",
+    "rewrites": [
+      {
+        "source": "/",
+        "destination": "/index.html"
+      },
+      {
+        "source": "/performer",
+        "destination": "/performer.html"
+      },
+      {
+        "source": "/controller",
+        "destination": "/controller.html"
+      }
+    ],
     "ignore": [
       "firebase.json",
       "**/.*",
