Updated Caching. Updated UI spacing.Moved MIDI for Performer to its own class

--- a/firebase.json
+++ b/firebase.json
@@ -23,6 +23,17 @@
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "headers": [
+      {
+        "source": "**/*.@(js)",
+        "headers": [
+          {
+            "key": "Cache-Control",
+            "value": "max-age=300"
+          }
+        ]
+      }
     ]
   }
 }
